== _._._ / TBD
  * Bug Fixes
    * Catch all Exceptions from HttpResponseCode condition [github.com/rliebling]
  * New Behaviors
    * clean_unix_socket [github.com/gma]
  * New Contacts
    * jabber [github.com/jwulff]

== 0.7.7 / 2008-06-17
  * Bug Fixes
    * Fix detection of proc file system [raggi]

== 0.7.6 / 2008-05-13
  * Major Enhancements
    * Implement System::Process methods for Linux based on /proc [Kevin Clark]
  * Minor Enhancements
    * Allowing directories to be loaded at start [Bert Goethals]
  * Bug Fixes
    * Don't leak events on error in the kqueue handler [Kevin Clark]

== 0.7.5 / 2008-02-21
  * Bug Fixes
    * Remove Ruby's Logger and replace with custom SimpleLogger to stop threaded leak

== 0.7.4 / 2008-02-18
  * Bug Fixes
    * Introduce local scope to prevent faulty optimization that causes memory to leak

== 0.7.3 / 2008-02-14
  * Minor Enhancements
    * Add --bleakhouse to make running diagnostics easier
  * Bug Fixes
    * Use ::Process.kill(0, ...) instead of `kill -0` [queso]
    * Fix pid_file behavior in process-centric conditions so they work with tasks [matias]
    * Redirect output of daemonized god to log file or /dev/null earlier [_eric]

== 0.7.2 / 2008-02-04
  * Bug Fixes
    * Start event system for CLI commands
    * Up internal history to 100 lines per watch

== 0.7.1 / 2008-02-04
  * Minor Enhancements
    * Add --no-events option to completely disable events system

== 0.7.0 / 2008-02-01
  * Minor Enhancements
    * Better default pid_file_directory behavior
    * Add --attach <pid> to specify that god should quit if <pid> exits
  * Bug Fixes
    * Handle ECONNRESET in HttpResponseCode

== 0.6.12 / 2008-01-31
  * Minor Enhancements
    * Allow log file output for non-daemonized god
    * Switch to SIGTERM from SIGHUP for default lambda killer

== 0.6.11 / 2008-01-31
  * Major Enhancements
    * HUGE refactor of timer system to simplify scheduling
  * Minor Enhancements