@@ -3,5 +3,3 @@ pkg
 *.log
 logs
 *.rbc
-*~
-.*.sw?
